# sphinx-needs

./: .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamlfmt  AGENTS.md  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.rst  codecov.yml  context7.json  contributing.md  coverage.xml  doc-requirements.txt  noxfile.py  package.json  pr_summary.md  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/: baumpfleger.yml  dependabot.yml
.github/scripts/: extract_benchmark_data.py
.github/workflows/: benchmark.yaml  ci.yaml  copilot-setup-steps.yml  docker.yaml  docs.yaml  js_test.yml  release.yaml
bench/: data.js
docker/: Dockerfile  build_docker.sh
docs/: api.rst  architecture.rst  builders.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  contributors.rst  directives.rst  docker.rst  dynamic_functions.rst  examples.rst  extensions.rst  filter.rst  index.html  index.rst  installation.rst  layout_styles.rst  memory.html  needs.json  performance.rst  requirements.txt  roles.rst  schema.rst  services.rst  snippets.rst  styles.rst  support.rst  tutorial.rst  ubproject.toml  utils.rst
docs/IDE/: features.rst  index.rst
docs/_static/: .gitignore  custom.css  sphinx_needs_paper.odt  tutorial_needs.json
docs/_templates/: layout.html
docs/bench/: data.js  index.html
docs/directives/: if.rst  index.rst  list-needs.rst  list2need.rst  need.rst  needarch.rst  needattribute.rst  needbar.rst  needextend.rst  needextract.rst  needfilter.rst  needflow.rst  needgantt.rst  needimport.rst  needlist.rst  needpie.rst  needreport.rst  needsequence.rst  needservice.rst  needsreport.rst  needtable.rst  needuml.rst
docs/examples/: index.rst  needs.json
docs/ide/: index.rst  installation.rst
docs/needs_templates/: content.need  report_template.need  spec_post_template.need  spec_pre_template.need  spec_template.need
docs/performance/: complex.txt  debug.rst  help.txt  index.rst  script.rst  series_output.txt
docs/schema/: index.rst  local_validation_cache.md
docs/services/: github.rst  index.rst  open_needs.rst
performance/: README.rst  performance_test.py  requirements.txt
performance/project/: conf.py  conf.template  index.rst  index.template  page.template
sphinx_needs/: __init__.py  _jinja.py  builder.py  config.py  data.py  debug.py  defaults.py  diagrams_common.py  environment.py  errors.py  exceptions.py  external_needs.py  filter_common.py  layout.py  logging.py  modeling.py  need_constraints.py  need_item.py  needs.py  needs_schema.py  needsfile.json  needsfile.py  reset.py  ubquery.py  utils.py  variant_data.py  variants.py  views.py  warnings.py
sphinx_needs/api/: __init__.py  configuration.py  exceptions.py  need.py
sphinx_needs/css/: common.css
sphinx_needs/directives/: list2need.py  listneeds.py  need.py  needarch.py  needattribute.py  needbar.py  needextend.py  needextract.py  needfilter.py  needflow.py  needgantt.py  needgraph.py  needif.py  needimport.py  needimport_template.rst  needlist.py  needpie.py  needreport.py  needreport_template.rst  needsequence.py  needservice.py  needtable.py  needuml.py  utils.py
sphinx_needs/functions/: __init__.py  common.py  functions.py
sphinx_needs/lsp/: __init__.py  esbonio.py  needs_store.py
sphinx_needs/nodes/: __init__.py
sphinx_needs/roles/: __init__.py  need_count.py  need_func.py  need_incoming.py  need_outgoing.py  need_part.py  need_ref.py  variant.py
sphinx_needs/schema/: config.py  config_utils.py  core.py  process.py  reporting.py  utils.py  validator.py
sphinx_needs/services/: base.py  github.py  manager.py  open_needs.py
sphinx_needs/templates/: permalink.html  time_measurements.html
sphinxcontrib/: builder.py  environment.py  need.py  need_incoming.py  need_outgoing.py  needfilter.py  needimport.py  needimport_template.rst  needs.py  utils.py
sphinxcontrib/css/: blank.css  dark.css
sphinxcontrib/needs/: __init__.py  builder.py  common.py  config.py  constraints.py  defaults.py  diagrams_common.py  environment.py  esbonio.py  external_needs.py  filter_base.py  filter_common.py  layout.py  logging.py  need.py  need_outgoing.py  need_ref.py  needfilter.py  needfilter_backup.py  needimport_template.rst  needs.py  needsfile.json  needsfile.py  needtable.py  utils.py  warnings.py
sphinxcontrib_needs.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  no_jsonschema_tests.py  no_mpl_tests.py  test_add_sections.py  test_add_sections_sigs.py  test_api_configuration.py  test_api_usage.py  test_api_usage_in_extension.py  test_arch.py  test_basic_doc.py  test_broken_doc.py  test_broken_docs.py  test_broken_links.py  test_broken_statuses.py  test_broken_syntax_doc.py  test_broken_tags.py  test_cicular_imports.py  test_clean_log.py  test_complex_builders.py  test_complex_doc.py  test_data.py  test_directive_only_exclusion.py  test_doc_build_latex.py  test_doc_build_only.py  test_dynamic_functions.py  test_export_id.py  test_external.py  test_extra_links.py  test_extra_options.py  test_field_defaults.py  test_filter.py  test_filter_simple.py  test_github_issues.py  test_global_options.py  test_hide_options.py  test_if_directive.py  test_import.py  test_jinja.py  test_jinja_content_option.py  test_js_code.py  (+73 more)
tests/__snapshots__/: test_add_sections_sigs.ambr  test_api_configuration.ambr  test_api_usage.ambr  test_basic_doc.ambr  test_dynamic_functions.ambr  test_export_id.ambr  test_external.ambr  test_extra_options.ambr  test_field_defaults.ambr  test_global_options.ambr  test_import.ambr  test_link_conditions.ambr  test_list2need.ambr  test_list_needs.ambr  test_need_constraints.ambr  test_need_item_api.ambr  test_need_parts.ambr  test_needarch.ambr  test_needextend.ambr  test_needimport.ambr  test_needs_builder.ambr  test_needs_from_toml.ambr  test_needs_id_builder.ambr  test_needs_look_up.ambr  test_needs_sort.ambr  test_needuml.ambr  test_nested.ambr  test_service_github.ambr  test_variants.ambr
tests/benchmarks/: test_basic.py  test_constrained_links_benchmark.py  test_official.py  (+2 more)
(+584 files in other folders)
